# PostQuantu-CLI

./: .gitignore  README.md  index.html  postquantu-cli.desktop  postquantu.spec  pyproject.toml
.github/workflows/: pages.yml
src/postquantu_cli/: cli.py
src/postquantu_cli/algo_functions/: decryption_algos.py  download_algo.py  encrypt_algos.py  sign_algos.py  utils.py  verify_algos.py
src/postquantu_cli/apis/: decryption_client.py  descrypt_verify_client.py  download_client.py  encryption_client.py  sign_client.py  sign_encrypt_client.py  verify_client.py
src/postquantu_cli/cli_menus/: decrypt_flow.py  encrypt_flow.py
test_files/: example.txt
