[project]
name = "postquantu-cli" 
version = "0.1.6"     
description = "A CLI for post-quantum cryptography operations"

requires-python = ">=3.9" 
dependencies = [
    "click>=8.0.0", 
    "requests==2.32.4",
    "black==25.1.0",
]

[project.scripts]
postquantu = "postquantu_cli.cli:postquantu" # 

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]